force-app/main/default/objects/Time_Log__c/Time_Log__c.object-meta.xml
<CustomObject>
    <label>Time Log</label>
    <nameField>
        <displayFormat>TL-{000000000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>