force-app/main/default/objects/Time_Log__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Start_Time__c)),
    NOT(ISBLANK(End_Time__c))
  ),
  (End_Time__c - Start_Time__c) * 24,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>