force-app/main/default/objects/Time_Log__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Time Logs</relationshipLabel>
    <relationshipName>Time_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>